--- a/data-import/data-import-accessible.qmd
+++ b/data-import/data-import-accessible.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Data import with the tidyverse : : CHEAT SHEET"
+title: "Data import with the tidyverse :: Cheat Sheet"
 format: 
   html:
     toc: true
