--- a/data-import/data-import-accessible.qmd
+++ b/data-import/data-import-accessible.qmd
@@ -286,6 +286,8 @@ read_excel(path, sheet = NULL, range = NULL)
     | x1  | x2  | x3  | x4  | x5  |
     | x   |     | z   | 8   |     |
     | y   | 7   |     | 9   | 10  |
+    
+    : Spreadsheet with 5 columns (A through E) and three rows. First row reads x1 through x5. Second and third row have some missing values.
 
 -   It will look like the following when imported:
 
@@ -354,6 +356,8 @@ read_excel(path, sheet = NULL, range = NULL)
     |---------|---------|-------|------------|-------|
     | TRUE    | 2       | hello | 1947-01-08 | hello |
     | FALSE   | 3.45    | world | 1956-10-21 | 1     |
+    
+    : Table with 5 columns. Column headers are various data types (logical, numeric, text, date, and list). The data in two rows show examples of data for the given column type.
 
     -   `skip`
 
@@ -392,11 +396,13 @@ Same as `range_read()`.
 
 -   If the Google sheet you want to import is the following:
 
-    |     | A   | B   | C   | D   | E   |
-    |-----|-----|-----|-----|-----|-----|
-    | 1   | x1  | x2  | x3  | x4  | x5  |
-    | 2   | x   |     | z   | 8   |     |
-    | 3   | y   | 7   |     | 9   | 10  |
+    | A   | B   | C   | D   | E   |
+    |-----|-----|-----|-----|-----|
+    | x1  | x2  | x3  | x4  | x5  |
+    | x   |     | z   | 8   |     |
+    | y   | 7   |     | 9   | 10  |
+    
+    : Spreadsheet with 5 columns (A through E) and three rows. First row reads x1 through x5. Second and third row have some missing values.
 
 -   It will look like the following when imported:
 
